# monorepo

./: .clangd  .gitignore
.devcontainer/: devcontainer.json  setup.sh
.ignore-devcontainer/: devcontainer.json  setup.sh
advent2022/2_rock_paper_scissors/: rock_paper_scissors.py
advent2022/3_rucksack_reorganization/: rucksack.py  rucksack_2.py
advent2022/4_camp_cleanup/: camp_cleanup.py
advent2022/5_supply_stacks/: compile.txt  supply_stacks.cpp
advent2022/7_no_space_left_on_device/: calculate_space.py
advent2022/8_treetop_tree_house/: treetop_jax.py
advent2022/9_rope_bridge/: rope_bridge.py
advent2022/calorie_counting/: calorie_counting.py
advent2022/templates/: template.py
advent2023/1_trebuchet/: trebuchet.py
advent2023/2_cube/: cube.py
advent2023/5_seeds/: example.txt  input.txt  seeds.py
advent2023/6_boats/: boats.py
advent2023/7_camel/: camel.rs
agent/: agent.go
bash/: PDA_Booking.sh  file_curtin.sh  file_lab_curtin.sh  git_update.sh
c/: pathfind
codeforces/: compile.sh
cpp/: a.out  count_to_million_by_one.cpp  page_fault.cpp  prime_factorization.cpp  vec_static_alloc_test.cpp  vec_static_alloc_test.out
cracked/: 148_gray.cpp  devenv.txt
dev/: .zprofile
env/.devcontainer/: setup.sh
euler/: p3.py  util.py
haskell/: graph.txt  program.hs
java/: Input.java
julia/: multiply_dist.jl
proj/euler/: p1.py  (+3 more)
proj/metal/: CMakeLists.txt  build.sh  conanfile.py  debug.yaml  release.yaml
proj/metal/src/: main.cc  shim.h  shim.mm  window.cc  window.h
python/: eggGuesses.ipynb  guesses.csv
vulkan/: main.cpp  vulkan.sln
(+45 files in other folders)
